<resources>
    <string name="app_name">MaterialDesignProject</string>
    <string name="photo_of_the_day">Photo of the day</string>
    <string name="search_wiki">Search Wiki</string>
    <string name="astronomy_picture_of_the_day">Astronomy Picture of the Day</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="_1">На экран 1</string>
    <string name="_2">На экран 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="_default">Default</string>
    <string name="_entry">Entry</string>
    <string name="_choice">Choice</string>
    <string name="_action">Action</string>
    <string name="_filter">Filter</string>
    <string name="_background_color">Background color</string>
    <string name="_ripple_color">Ripple color</string>
    <string name="_chip_icon">Chip icon</string>
    <string name="_chip">Chip</string>
    <string name="_group">Group</string>
    <string name="_scroll">scroll</string>
    <string name="_horizontal">horizontal</string>
    <string name="_a">a</string>
    <string name="_add">add</string>
    <string name="_line">line</string>
    <string name="_single">single</string>
    <string name="_in">in</string>
    <string name="_today">Today</string>
    <string name="_yesterday">Yesterday</string>
    <string name="_before_yesterday">Before Yesterday</string>
    <string name="_info_waited">Information is waited…</string>
    <string name="_app_theme">App theme</string>
    <string name="_theme_mode">Theme mode</string>
    <string name="_window_reflection_theme">Window Reflection Theme</string>
    <string name="_spain_sunset">Spain Sunset</string>
    <string name="_light">Light</string>
    <string name="_dark">Dark</string>
    <string name="_system_default">System default</string>
    <string name="_nasa_video_message">Today NASA sent a video. \nIf you want to see this one click on the button</string>
    <string name="_see_video">Show me video</string>
    <string name="photos">Photos</string>
    <string name="search">Search</string>
    <string name="_previous_day">Previous day</string>
    <string name="_next_day">Next day</string>
    <string name="_set_date">Set date</string>
    <string name="curiosity">Curiosity</string>
    <string name="opportunity">Opportunity</string>
    <string name="spirit">Spirit</string>
    <string name="_asteroids">Asteroids</string>
    <string name="_name">Name:</string>
    <string name="_h_absolute_magnitude">H (absolute magnitude):</string>
    <string name="_is_potentially_hazardous_asteroid">Is potentially hazardous asteroid:</string>
    <string name="_close_approach_date_time">Close approach date/time:</string>
    <string name="_orbiting_body">Orbiting body:</string>
    <string name="_estimated_diameter_min_m">Estimated diameter, min(m):</string>
    <string name="_miss_distance_km">Miss distance(km):</string>
    <string name="_estimated_diameter_max_m">Estimated diameter, max(m):</string>
    <string name="_relative_velocity_km_sec">Relative velocity (km/sec):</string>
    <string name="_previous">Previous</string>
    <string name="_next">Next</string>
    <string name="_drop_up_button">Drop up button</string>
    <string name="_drop_down_button">Drop down button</string>
    <string name="_favorite_button">Favorite button</string>
    <string name="_delete_button">Delete button</string>
    <string name="_hamburger_button">Hamburger button</string>
    <string name="_app_version">version 1.0.0.</string>
    <string name="_created_by_artushock">Created by Artushock</string>
</resources>