<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.main.view.fragments.SettingsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_app_theme"
        android:textStyle="bold"
        android:textSize="20sp" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/app_theme_chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:selectionRequired="true">

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/chip_blue_green_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_window_reflection_theme"/>

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/chip_red_orange_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_spain_sunset"/>

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_theme_mode"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/theme_mode_chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:selectionRequired="true">

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/chip_light_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_light"/>

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/chip_dark_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_dark"/>

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:id="@+id/chip_system_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_system_default"/>

    </com.google.android.material.chip.ChipGroup>

</LinearLayout>