<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.fragments.photo.DayBeforeYesterdayPhotoFragment">

    <ImageView
        android:id="@+id/nearest_asteroid_asteroids_image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.32"
        android:scaleType="centerCrop"
        android:src="@drawable/asteroids"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/_asteroids" />

    <TextView
        android:id="@+id/nearest_asteroid_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="?colorPrimary"
        android:textSize="18sp"
        android:textColor="?colorOnPrimary"
        android:padding="8dp"
        android:layout_marginBottom="8dp"
        android:text="Today there are 10 the nearest asteroids"
        app:layout_constraintBottom_toTopOf="@+id/nearest_asteroid_magnitude_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nearest_asteroid_asteroids_image_view"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/nearest_asteroid_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_name"
        app:layout_constraintBottom_toTopOf="@+id/nearest_asteroid_magnitude_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nearest_asteroid_title_text_view"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/nearest_asteroid_magnitude_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/_h_absolute_magnitude"
        app:layout_constraintBottom_toTopOf="@+id/nearest_asteroid_is_potentially_hazardous_asteroid_text_view"
        app:layout_constraintStart_toStartOf="@+id/nearest_asteroid_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/nearest_asteroid_name_text_view" />

    <TextView
        android:id="@+id/nearest_asteroid_is_potentially_hazardous_asteroid_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/_is_potentially_hazardous_asteroid"
        app:layout_constraintBottom_toTopOf="@+id/nearest_asteroid_close_approach_date_text_view"
        app:layout_constraintStart_toStartOf="@+id/nearest_asteroid_magnitude_text_view"
        app:layout_constraintTop_toBottomOf="@+id/nearest_asteroid_magnitude_text_view" />

    <TextView
        android:id="@+id/nearest_asteroid_close_approach_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/_close_approach_date_time"
        app:layout_constraintBottom_toTopOf="@+id/nearest_asteroid_orbiting_body_text_view"
        app:layout_constraintStart_toStartOf="@+id/nearest_asteroid_is_potentially_hazardous_asteroid_text_view"
        app:layout_constraintTop_toBottomOf="@+id/nearest_asteroid_is_potentially_hazardous_asteroid_text_view" />

    <TextView
        android:id="@+id/nearest_asteroid_orbiting_body_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/_orbiting_body"
        app:layout_constraintBottom_toTopOf="@+id/nearest_asteroid_estimated_diameter_min_text_view"
        app:layout_constraintStart_toStartOf="@+id/nearest_asteroid_close_approach_date_text_view"
        app:layout_constraintTop_toBottomOf="@+id/nearest_asteroid_close_approach_date_text_view" />

    <TextView
        android:id="@+id/nearest_asteroid_estimated_diameter_min_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/_estimated_diameter_min_m"
        app:layout_constraintBottom_toTopOf="@+id/nearest_asteroid_estimated_diameter_max_text_view"
        app:layout_constraintStart_toStartOf="@+id/nearest_asteroid_orbiting_body_text_view"
        app:layout_constraintTop_toBottomOf="@+id/nearest_asteroid_orbiting_body_text_view" />

    <TextView
        android:id="@+id/nearest_asteroid_miss_distance_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_miss_distance_km"
        app:layout_constraintBottom_toTopOf="@+id/nearest_asteroid_previous_button"
        app:layout_constraintStart_toStartOf="@+id/nearest_asteroid_relative_velocity_text_view"
        app:layout_constraintTop_toBottomOf="@+id/nearest_asteroid_relative_velocity_text_view" />

    <TextView
        android:id="@+id/nearest_asteroid_estimated_diameter_max_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/_estimated_diameter_max_m"
        app:layout_constraintBottom_toTopOf="@+id/nearest_asteroid_relative_velocity_text_view"
        app:layout_constraintStart_toStartOf="@+id/nearest_asteroid_estimated_diameter_min_text_view"
        app:layout_constraintTop_toBottomOf="@+id/nearest_asteroid_estimated_diameter_min_text_view" />

    <TextView
        android:id="@+id/nearest_asteroid_relative_velocity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/_relative_velocity_km_sec"
        app:layout_constraintBottom_toTopOf="@+id/nearest_asteroid_miss_distance_text_view"
        app:layout_constraintStart_toStartOf="@+id/nearest_asteroid_estimated_diameter_max_text_view"
        app:layout_constraintTop_toBottomOf="@+id/nearest_asteroid_estimated_diameter_max_text_view" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/nearest_asteroid_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="
        nearest_asteroid_name_text_view,
        nearest_asteroid_magnitude_text_view,
        nearest_asteroid_is_potentially_hazardous_asteroid_text_view,
        nearest_asteroid_close_approach_date_text_view,
        nearest_asteroid_orbiting_body_text_view,
        nearest_asteroid_estimated_diameter_min_text_view,
        nearest_asteroid_estimated_diameter_max_text_view,
        nearest_asteroid_relative_velocity_text_view,
        nearest_asteroid_miss_distance_text_view" />

    <TextView
        android:id="@+id/nearest_asteroid_name_response_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        tools:text="(2016 EK158)"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@id/nearest_asteroid_barrier"
        app:layout_constraintTop_toTopOf="@id/nearest_asteroid_name_text_view" />

    <TextView
        android:id="@+id/nearest_asteroid_magnitude_response_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        tools:text="20.56"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@id/nearest_asteroid_barrier"
        app:layout_constraintTop_toTopOf="@id/nearest_asteroid_magnitude_text_view" />

    <TextView
        android:id="@+id/nearest_asteroid_is_potentially_hazardous_asteroid_response_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        tools:text="No"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@id/nearest_asteroid_barrier"
        app:layout_constraintTop_toTopOf="@id/nearest_asteroid_is_potentially_hazardous_asteroid_text_view" />

    <TextView
        android:id="@+id/nearest_asteroid_close_approach_date_response_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        tools:text="2021-Nov-01 23:02"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@id/nearest_asteroid_barrier"
        app:layout_constraintTop_toTopOf="@id/nearest_asteroid_close_approach_date_text_view" />

    <TextView
        android:id="@+id/nearest_asteroid_orbiting_body_response_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        tools:text="Earth"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@id/nearest_asteroid_barrier"
        app:layout_constraintTop_toTopOf="@id/nearest_asteroid_orbiting_body_text_view" />

    <TextView
        android:id="@+id/nearest_asteroid_estimated_diameter_min_response_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        tools:text="133.2155666981"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@id/nearest_asteroid_barrier"
        app:layout_constraintTop_toTopOf="@id/nearest_asteroid_estimated_diameter_min_text_view" />

    <TextView
        android:id="@+id/nearest_asteroid_estimated_diameter_max_response_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        tools:text="297.8790627982"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@id/nearest_asteroid_barrier"
        app:layout_constraintTop_toTopOf="@id/nearest_asteroid_estimated_diameter_max_text_view" />

    <TextView
        android:id="@+id/nearest_asteroid_relative_velocity_response_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        tools:text="10.7616713568"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@id/nearest_asteroid_barrier"
        app:layout_constraintTop_toTopOf="@id/nearest_asteroid_relative_velocity_text_view" />

    <TextView
        android:id="@+id/nearest_asteroid_miss_distance_response_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        tools:text="42822715.632947676"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@id/nearest_asteroid_barrier"
        app:layout_constraintTop_toTopOf="@id/nearest_asteroid_miss_distance_text_view" />

    <Button
        android:id="@+id/nearest_asteroid_previous_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nearest_asteroid_next_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="100dp"
        app:layout_constraintWidth_percent="0.3" />

    <Button
        android:id="@+id/nearest_asteroid_next_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nearest_asteroid_previous_button"
        app:layout_constraintTop_toTopOf="@+id/nearest_asteroid_previous_button"
        app:layout_constraintWidth_percent="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>